--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kizou",
   "version": "0.1.0",
-  "homepage": "http://kizou.org",
+  "homepage": "https://mansha71.github.io/MananSharmaPortolio",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
@@ -11,6 +11,7 @@
     "@types/react-dom": "^18.2.21",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
+    "gh-pages": "^6.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-responsive-carousel": "^3.2.23",
@@ -21,6 +22,8 @@
     "typescript": "^3.2.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test"
