--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kizou",
   "version": "0.1.0",
-  "homepage": "https://manan-sharma-portolio.vercel.app",
+  "homepage": "https://manan-sharma-portolio.vercel.app/",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
