--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "kizou",
   "version": "0.1.0",
-  "homepage": "https://manan-sharma-portolio.vercel.app/",
+  "homepage": "https://mansha71.github.io/MananSharmaPortolio",
   "private": true,
   "dependencies": {
     "@headlessui/react": "^1.5.0",
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -b gh-pages -d build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test"
